--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,10 +24,10 @@ spring:
           environment:
             spring:
               rabbitmq:
-                host: 127.0.0.1
+                host: localhost
                 port: 5672
-                username: rabbit
-                password: rabbit
+                username: guest
+                password: guest
                 virtual-host: /
       rabbit:
         bindings:
